# XIL2CppDumper

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  IL2CppBinParser.cpp  IL2CppBinParser.h  README.md  XIL2CppDumper.cpp  XIL2CppDumper.h  il2cpp-metadata.h  il2cpp-runtime-metadata.h  il2cpp-tabledefs.h  main.cpp  xia0.h
dump/: dump.cs
il2cpp-header/: il2cpp-misc.h
il2cpp-header/2020.1.0/: il2cpp-class-internals.h  il2cpp-metadata.h
il2cpp-header/24.0/: il2cpp-class-internals.h  il2cpp-metadata.h
il2cpp-header/24.1/: il2cpp-class-internals.h  il2cpp-metadata.h
